# CMakeLists.txt file

# Incluir primero el punto de entrada de las pruebas
add_subdirectory(tests_common)

# Registrar las carpetas de los retos agregando su ruta relativa
add_subdirectory(codeforces_problems/001_two_sum)
add_subdirectory(leetcode_problems/001_two_array_sum)
adsubdirectory(codewars_katas/001_oposite_sides-array)
